--- a/achievements.html
+++ b/achievements.html
@@ -9,100 +9,101 @@
 
 <body>
 
-<!-- NAV -->
-<nav class="nav">
-  <div class="nav-inner">
-    <div class="logo">Muayad Al Abduwani</div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a class="active" href="achievements.html">Achievements</a></li>
-      <li><a href="assets/resume.pdf" download>Resume</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </div>
-</nav>
-
-<!-- PAGE -->
-<section class="page">
-  <div class="container">
-    <h1 class="page-title center">Achievements & Certifications</h1>
-    <p class="page-subtitle center">
-      Academic, professional, and industry recognitions
-    </p>
-
-    <div class="achievements-grid">
-
-      <div class="achievement-card">
-        <div class="icon">🎓</div>
-        <h3>IGCSE</h3>
-        <p class="type">Certification of Completion</p>
-        <p class="org">The Sultan’s School</p>
-        <span class="date">2019 – 2021</span>
-      </div>
-
-      <div class="achievement-card">
-        <div class="icon">📘</div>
-        <h3>IB Diploma</h3>
-        <p class="type">Certification of Completion</p>
-        <p class="org">The Sultan’s School</p>
-        <span class="date">2021 – 2023</span>
-      </div>
-
-      <div class="achievement-card">
-        <div class="icon">📝</div>
-        <h3>IELTS</h3>
-        <p class="type">Certification of Completion</p>
-        <span class="date">2023</span>
-      </div>
-
-      <div class="achievement-card">
-        <div class="icon">📡</div>
-        <h3>Omantel</h3>
-        <p class="type">Certification of Completion</p>
-        <p class="org">Big Data & Analytics Unit<br>Consumer Unit</p>
-        <span class="date">2024</span>
-      </div>
-
-      <div class="achievement-card">
-        <div class="icon">🏢</div>
-        <h3>Oman Data Park (ODP)</h3>
-        <p class="type">Certification of Completion</p>
-        <p class="org">Center of Excellence</p>
-        <span class="date">2025</span>
-      </div>
-
-      <div class="achievement-card">
-        <div class="icon">🏢</div>
-        <h3>Oman Data Park (ODP)</h3>
-        <p class="type">Certification of Completion</p>
-        <p class="org">Governance, Risk & Compliance</p>
-        <span class="date">2025</span>
-      </div>
-
-      <div class="achievement-card highlight">
-        <div class="icon">🤖</div>
-        <h3>ORKI AI</h3>
-        <p class="type">Certification of Completion</p>
-        <p class="org">Freelancer</p>
-        <span class="date">2025</span>
-      </div>
-
-      <div class="achievement-card highlight">
-        <div class="icon">🌍</div>
-        <h3>Zain Omantel International</h3>
-        <p class="type">Certification of Completion</p>
-        <p class="org">Software Engineer</p>
-        <span class="date">2025</span>
-      </div>
-
+  <!-- NAV -->
+  <nav class="nav">
+    <div class="nav-inner">
+      <div class="logo">Muayad Al Abduwani</div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a class="active" href="achievements.html">Achievements</a></li>
+        <li><a href="assets/resume.pdf" download>Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </div>
-  </div>
-</section>
+  </nav>
 
-<footer class="footer">
-  © 2026 Muayad Al Abduwani
-</footer>
+  <!-- PAGE -->
+  <section class="page">
+    <div class="container">
+      <h1 class="page-title center">Achievements & Certifications</h1>
+      <p class="page-subtitle center">
+        Academic, professional, and industry recognitions
+      </p>
+
+      <div class="achievements-grid">
+
+        <div class="achievement-card">
+          <div class="icon">🎓</div>
+          <h3>IGCSE</h3>
+          <p class="type">Certification of Completion</p>
+          <p class="org">The Sultan’s School</p>
+          <span class="date">2019 – 2021</span>
+        </div>
+
+        <div class="achievement-card">
+          <div class="icon">📘</div>
+          <h3>IB Diploma</h3>
+          <p class="type">Certification of Completion</p>
+          <p class="org">The Sultan’s School</p>
+          <span class="date">2021 – 2023</span>
+        </div>
+
+        <div class="achievement-card">
+          <div class="icon">📝</div>
+          <h3>IELTS</h3>
+          <p class="type">Certification of Completion</p>
+          <span class="date">2023</span>
+        </div>
+
+        <div class="achievement-card">
+          <div class="icon">📡</div>
+          <h3>Omantel</h3>
+          <p class="type">Certification of Completion</p>
+          <p class="org">Big Data &amp; Analytics Unit<br>Consumer Unit</p>
+          <span class="date">2024</span>
+        </div>
+
+        <div class="achievement-card">
+          <div class="icon">🏢</div>
+          <h3>Oman Data Park (ODP)</h3>
+          <p class="type">Certification of Completion</p>
+          <p class="org">Center of Excellence</p>
+          <span class="date">2025</span>
+        </div>
+
+        <div class="achievement-card">
+          <div class="icon">🏢</div>
+          <h3>Oman Data Park (ODP)</h3>
+          <p class="type">Certification of Completion</p>
+          <p class="org">Governance, Risk &amp; Compliance</p>
+          <span class="date">2025</span>
+        </div>
+
+        <div class="achievement-card highlight">
+          <div class="icon">🤖</div>
+          <h3>ORKI AI</h3>
+          <p class="type">Certification of Completion</p>
+          <p class="org">Freelancer</p>
+          <span class="date">2025</span>
+        </div>
+
+        <!-- ADDED: Zain Omantel International -->
+        <div class="achievement-card highlight">
+          <div class="icon">🌍</div>
+          <h3>Zain Omantel International</h3>
+          <p class="type">Certification of Completion</p>
+          <p class="org">Software Engineer</p>
+          <span class="date">2025</span>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    © 2026 Muayad Al Abduwani
+  </footer>
 
 </body>
 </html>
