--- a/achievements.html
+++ b/achievements.html
@@ -7,72 +7,71 @@
       <div class="achievement-card">
         <div class="icon">🎓</div>
         <h3>IGCSE</h3>
-        <p>Certification of Completion</p>
+        <p class="type">Certification of Completion</p>
         <p class="org">The Sultan’s School</p>
-        <span>2019 – 2021</span>
+        <span class="date">2019 – 2021</span>
       </div>
 
       <div class="achievement-card">
         <div class="icon">📘</div>
         <h3>IB Diploma</h3>
-        <p>Certification of Completion</p>
+        <p class="type">Certification of Completion</p>
         <p class="org">The Sultan’s School</p>
-        <span>2021 – 2023</span>
+        <span class="date">2021 – 2023</span>
       </div>
 
       <div class="achievement-card">
         <div class="icon">📝</div>
         <h3>IELTS</h3>
-        <p>Certification of Completion</p>
-        <span>2023</span>
+        <p class="type">Certification of Completion</p>
+        <span class="date">2023</span>
       </div>
 
       <div class="achievement-card">
         <div class="icon">📡</div>
         <h3>Omantel</h3>
-        <p>Certification of Completion</p>
-        <p class="org">Big Data & Analytics Unit<br>Consumer Unit</p>
-        <span>2024</span>
+        <p class="type">Certification of Completion</p>
+        <p class="org">Big Data &amp; Analytics Unit<br>Consumer Unit</p>
+        <span class="date">2024</span>
       </div>
 
       <div class="achievement-card">
         <div class="icon">🏢</div>
         <h3>Oman Data Park (ODP)</h3>
-        <p>Certification of Completion</p>
+        <p class="type">Certification of Completion</p>
         <p class="org">Center of Excellence</p>
-        <span>2025</span>
+        <span class="date">2025</span>
       </div>
 
       <div class="achievement-card">
         <div class="icon">🏢</div>
         <h3>Oman Data Park (ODP)</h3>
-        <p>Certification of Completion</p>
+        <p class="type">Certification of Completion</p>
         <p class="org">Governance, Risk &amp; Compliance</p>
-        <span>2025</span>
+        <span class="date">2025</span>
       </div>
 
-      <div class="achievement-card">
+      <div class="achievement-card highlight">
         <div class="icon">🤖</div>
         <h3>ORKI AI</h3>
-        <p>Certification of Completion</p>
+        <p class="type">Certification of Completion</p>
         <p class="org">Freelancer</p>
-        <span>2025</span>
+        <span class="date">2025</span>
       </div>
 
-      <!-- ✅ MISSING CARD ADDED -->
       <div class="achievement-card highlight">
         <div class="icon">🌍</div>
         <h3>Zain Omantel International</h3>
-        <p>Certification of Completion</p>
+        <p class="type">Certification of Completion</p>
         <p class="org">Software Engineer</p>
-        <span>2025</span>
+        <span class="date">2025</span>
       </div>
 
       <div class="achievement-card highlight">
         <div class="icon">🏆</div>
         <h3>Icons Oman</h3>
-        <p>Digital Content Creator</p>
-        <span>2025</span>
+        <p class="type">Digital Content Creator</p>
+        <span class="date">2025</span>
       </div>
 
     </div>
