--- a/achievements.html
+++ b/achievements.html
@@ -31,7 +31,10 @@
         <div class="icon">📡</div>
         <h3>Omantel</h3>
         <p class="type">Certification of Completion</p>
-        <p class="org">Big Data &amp; Analytics Unit<br>Consumer Unit</p>
+        <p class="org">
+          Big Data &amp; Analytics Unit<br>
+          Consumer Unit
+        </p>
         <span class="date">2024</span>
       </div>
 
@@ -59,6 +62,7 @@
         <span class="date">2025</span>
       </div>
 
+      <!-- ✅ MISSING CARD – NOW FIXED -->
       <div class="achievement-card highlight">
         <div class="icon">🌍</div>
         <h3>Zain Omantel International</h3>
