--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <div class="icon">🎓</div>
         <h3>IGCSE</h3>
         <p>Certification of Completion</p>
+        <p class="org">The Sultan’s School</p>
         <span>2019 – 2021</span>
       </div>
 
@@ -92,6 +93,7 @@
         <div class="icon">📘</div>
         <h3>IB Diploma</h3>
         <p>Certification of Completion</p>
+        <p class="org">The Sultan’s School</p>
         <span>2021 – 2023</span>
       </div>
 
@@ -106,6 +108,7 @@
         <div class="icon">📡</div>
         <h3>Omantel</h3>
         <p>Certification of Completion</p>
+        <p class="org">Big Data & Analytics Unit<br>Consumer Unit</p>
         <span>2024</span>
       </div>
 
@@ -113,6 +116,7 @@
         <div class="icon">🏢</div>
         <h3>Oman Data Park (ODP)</h3>
         <p>Certification of Completion</p>
+        <p class="org">Center of Excellence</p>
         <span>2025</span>
       </div>
 
@@ -120,6 +124,7 @@
         <div class="icon">🏢</div>
         <h3>Oman Data Park (ODP)</h3>
         <p>Certification of Completion</p>
+        <p class="org">Governance, Risk &amp; Compliance</p>
         <span>2025</span>
       </div>
 
@@ -127,6 +132,15 @@
         <div class="icon">🤖</div>
         <h3>ORKI AI</h3>
         <p>Certification of Completion</p>
+        <p class="org">Freelancer</p>
+        <span>2025</span>
+      </div>
+
+      <div class="achievement-card highlight">
+        <div class="icon">🌍</div>
+        <h3>Zain Omantel International</h3>
+        <p>Certification of Completion</p>
+        <p class="org">Software Engineer</p>
         <span>2025</span>
       </div>
 
@@ -195,4 +209,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
