--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <!-- ABOUT -->
 <section id="about" class="section">
   <div class="container narrow about-layout">
-    <img src="assets/profile.png" alt="Muayad Al Abduwani" class="profile">
+    <img src="./assets/profile.png" alt="Muayad Al Abduwani" class="profile">
 
     <div>
       <h2>About</h2>
@@ -209,6 +209,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
