--- a/achievements.html
+++ b/achievements.html
@@ -1,13 +1,11 @@
 <section class="section" id="achievements">
   <div class="container">
-
     <h1 class="page-title center">Achievements & Certifications</h1>
-
     <div class="achievements-grid">
 
       <div class="achievement-card">
         <div class="icon">🎓</div>
-        <h3>IGCSE</h3>
+        <h3><a href="https://www.linkedin.com/school/the-sultans-school/" target="_blank">IGCSE</a></h3>
         <p>Certification of Completion</p>
         <p class="org">The Sultan’s School</p>
         <span>2019 – 2021</span>
@@ -15,7 +13,7 @@
 
       <div class="achievement-card">
         <div class="icon">📘</div>
-        <h3>IB Diploma</h3>
+        <h3><a href="https://www.linkedin.com/school/the-sultans-school/" target="_blank">IB Diploma</a></h3>
         <p>Certification of Completion</p>
         <p class="org">The Sultan’s School</p>
         <span>2021 – 2023</span>
@@ -23,14 +21,14 @@
 
       <div class="achievement-card">
         <div class="icon">📝</div>
-        <h3>IELTS</h3>
+        <h3><a href="https://www.linkedin.com/showcase/ielts-official/" target="_blank">IELTS</a></h3>
         <p>Certification of Completion</p>
         <span>2023</span>
       </div>
 
       <div class="achievement-card">
         <div class="icon">📡</div>
-        <h3>Omantel</h3>
+        <h3><a href="https://www.linkedin.com/company/omantel/" target="_blank">Omantel</a></h3>
         <p>Certification of Completion</p>
         <p class="org">Big Data & Analytics Unit<br>Consumer Unit</p>
         <span>2024</span>
@@ -38,7 +36,7 @@
 
       <div class="achievement-card">
         <div class="icon">🏢</div>
-        <h3>Oman Data Park (ODP)</h3>
+        <h3><a href="https://www.linkedin.com/company/oman-data-park/" target="_blank">Oman Data Park (ODP)</a></h3>
         <p>Certification of Completion</p>
         <p class="org">Center of Excellence</p>
         <span>2025</span>
@@ -46,7 +44,7 @@
 
       <div class="achievement-card">
         <div class="icon">🏢</div>
-        <h3>Oman Data Park (ODP)</h3>
+        <h3><a href="https://www.linkedin.com/company/oman-data-park/" target="_blank">Oman Data Park (ODP)</a></h3>
         <p>Certification of Completion</p>
         <p class="org">Governance, Risk &amp; Compliance</p>
         <span>2025</span>
@@ -54,7 +52,7 @@
 
       <div class="achievement-card">
         <div class="icon">🤖</div>
-        <h3>ORKI AI</h3>
+        <h3><a href="https://www.linkedin.com/company/orki-ai/" target="_blank">ORKI AI</a></h3>
         <p>Certification of Completion</p>
         <p class="org">Freelancer</p>
         <span>2025</span>
@@ -62,15 +60,14 @@
 
       <div class="achievement-card">
         <div class="icon">🏆</div>
-        <h3>Icons Oman</h3>
+        <h3><a href="https://www.linkedin.com/company/icons-oman/" target="_blank">Icons Oman</a></h3>
         <p>Digital Content Creator</p>
         <span>2025</span>
       </div>
 
-      <!-- ✅ THIS IS THE 9TH CARD — IT WILL SHOW -->
       <div class="achievement-card highlight">
         <div class="icon">🌍</div>
-        <h3>Zain Omantel International</h3>
+        <h3><a href="https://www.linkedin.com/company/zain-omantel-international/" target="_blank">Zain Omantel International</a></h3>
         <p>Certification of Completion</p>
         <p class="org">Software Engineer</p>
         <span>2025</span>
