--- a/achievements.html
+++ b/achievements.html
@@ -1,27 +1,29 @@
 <section class="section" id="achievements">
   <div class="container">
+
     <h1 class="page-title center">Achievements & Certifications</h1>
+
     <div class="achievements-grid">
 
       <div class="achievement-card">
         <div class="icon">🎓</div>
-        <h3><a href="https://www.linkedin.com/school/the-sultans-school/" target="_blank">IGCSE</a></h3>
+        <h3>IGCSE</h3>
         <p>Certification of Completion</p>
-        <p class="org">The Sultan’s School</p>
+        <p class="org"><a href="https://www.linkedin.com/school/the-sultans-school/" target="_blank">The Sultan’s School</a></p>
         <span>2019 – 2021</span>
       </div>
 
       <div class="achievement-card">
         <div class="icon">📘</div>
-        <h3><a href="https://www.linkedin.com/school/the-sultans-school/" target="_blank">IB Diploma</a></h3>
+        <h3>IB Diploma</h3>
         <p>Certification of Completion</p>
-        <p class="org">The Sultan’s School</p>
+        <p class="org"><a href="https://www.linkedin.com/school/the-sultans-school/" target="_blank">The Sultan’s School</a></p>
         <span>2021 – 2023</span>
       </div>
 
       <div class="achievement-card">
         <div class="icon">📝</div>
-        <h3><a href="https://www.linkedin.com/showcase/ielts-official/" target="_blank">IELTS</a></h3>
+        <h3>IELTS</h3>
         <p>Certification of Completion</p>
         <span>2023</span>
       </div>
@@ -52,7 +54,7 @@
 
       <div class="achievement-card">
         <div class="icon">🤖</div>
-        <h3><a href="https://www.linkedin.com/company/orki-ai/" target="_blank">ORKI AI</a></h3>
+        <h3>ORKI AI</h3>
         <p>Certification of Completion</p>
         <p class="org">Freelancer</p>
         <span>2025</span>
@@ -60,14 +62,14 @@
 
       <div class="achievement-card">
         <div class="icon">🏆</div>
-        <h3><a href="https://www.linkedin.com/company/icons-oman/" target="_blank">Icons Oman</a></h3>
+        <h3>Icons Oman</h3>
         <p>Digital Content Creator</p>
         <span>2025</span>
       </div>
 
       <div class="achievement-card highlight">
         <div class="icon">🌍</div>
-        <h3><a href="https://www.linkedin.com/company/zain-omantel-international/" target="_blank">Zain Omantel International</a></h3>
+        <h3><a href="https://www.linkedin.com/company/zain-omantel/" target="_blank">Zain Omantel International</a></h3>
         <p>Certification of Completion</p>
         <p class="org">Software Engineer</p>
         <span>2025</span>
