--- a/achievements.html
+++ b/achievements.html
@@ -1,26 +1,28 @@
 <section class="section" id="achievements">
   <div class="container">
-
     <h1 class="page-title center">Achievements & Certifications</h1>
 
     <div class="achievements-grid">
 
+      <!-- IGCSE -->
       <div class="achievement-card">
         <div class="icon">🎓</div>
         <h3>IGCSE</h3>
         <p>Certification of Completion</p>
-        <p class="org"><a href="https://www.linkedin.com/school/the-sultans-school/" target="_blank">The Sultan’s School</a></p>
+        <p class="org">The Sultan’s School</p>
         <span>2019 – 2021</span>
       </div>
 
+      <!-- IB Diploma -->
       <div class="achievement-card">
         <div class="icon">📘</div>
         <h3>IB Diploma</h3>
         <p>Certification of Completion</p>
-        <p class="org"><a href="https://www.linkedin.com/school/the-sultans-school/" target="_blank">The Sultan’s School</a></p>
+        <p class="org">The Sultan’s School</p>
         <span>2021 – 2023</span>
       </div>
 
+      <!-- IELTS -->
       <div class="achievement-card">
         <div class="icon">📝</div>
         <h3>IELTS</h3>
@@ -28,30 +30,46 @@
         <span>2023</span>
       </div>
 
+      <!-- Omantel -->
       <div class="achievement-card">
         <div class="icon">📡</div>
-        <h3><a href="https://www.linkedin.com/company/omantel/" target="_blank">Omantel</a></h3>
+        <h3>
+          <a href="https://www.linkedin.com/company/omantel/" target="_blank">
+            Omantel
+          </a>
+        </h3>
         <p>Certification of Completion</p>
         <p class="org">Big Data & Analytics Unit<br>Consumer Unit</p>
         <span>2024</span>
       </div>
 
+      <!-- Oman Data Park - Center of Excellence -->
       <div class="achievement-card">
         <div class="icon">🏢</div>
-        <h3><a href="https://www.linkedin.com/company/oman-data-park/" target="_blank">Oman Data Park (ODP)</a></h3>
+        <h3>
+          <a href="https://www.linkedin.com/company/oman-data-park/" target="_blank">
+            Oman Data Park (ODP)
+          </a>
+        </h3>
         <p>Certification of Completion</p>
         <p class="org">Center of Excellence</p>
         <span>2025</span>
       </div>
 
+      <!-- Oman Data Park - GRC -->
       <div class="achievement-card">
         <div class="icon">🏢</div>
-        <h3><a href="https://www.linkedin.com/company/oman-data-park/" target="_blank">Oman Data Park (ODP)</a></h3>
+        <h3>
+          <a href="https://www.linkedin.com/company/oman-data-park/" target="_blank">
+            Oman Data Park (ODP)
+          </a>
+        </h3>
         <p>Certification of Completion</p>
         <p class="org">Governance, Risk &amp; Compliance</p>
         <span>2025</span>
       </div>
 
+      <!-- ORKI AI -->
       <div class="achievement-card">
         <div class="icon">🤖</div>
         <h3>ORKI AI</h3>
@@ -60,6 +78,7 @@
         <span>2025</span>
       </div>
 
+      <!-- Icons Oman -->
       <div class="achievement-card">
         <div class="icon">🏆</div>
         <h3>Icons Oman</h3>
@@ -67,9 +86,14 @@
         <span>2025</span>
       </div>
 
+      <!-- Zain Omantel International -->
       <div class="achievement-card highlight">
         <div class="icon">🌍</div>
-        <h3><a href="https://www.linkedin.com/company/zain-omantel/" target="_blank">Zain Omantel International</a></h3>
+        <h3>
+          <a href="https://www.linkedin.com/company/zain-omantel/" target="_blank">
+            Zain Omantel International
+          </a>
+        </h3>
         <p>Certification of Completion</p>
         <p class="org">Software Engineer</p>
         <span>2025</span>
