--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<!-- NAV -->
+<!-- NAVIGATION -->
 <nav class="nav">
   <div class="nav-inner">
     <div class="logo">Muayad Al Abduwani <span>• Entrepreneur</span></div>
@@ -19,33 +19,31 @@
       <li><a href="#achievements">Achievements</a></li>
       <li><a href="#contact">Contact</a></li>
       <li>
-        <a href="https://www.linkedin.com/in/muayad-al-abduwani-b182b7265"
-           target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/muayad-al-abduwani-b182b7265" target="_blank">
+          LinkedIn
+        </a>
       </li>
     </ul>
   </div>
 </nav>
 
-<!-- HERO -->
+<!-- HERO SECTION -->
 <section id="home" class="hero">
   <div class="container center">
     <h1><span>Build.</span> Evolve.</h1>
     <p class="subtitle">Start now — let’s connect and grow.</p>
-
     <div class="buttons">
       <a href="assets/resume.pdf" class="btn primary" download>View Resume</a>
       <a href="#contact" class="btn outline">Contact Me</a>
     </div>
-
     <div class="tags">
       <span>Data Science</span>
       <span>AI Engineer</span>
-      <span>AI Developer</span>
-      <span>Power BI</span>
-      <span>Canva</span>
       <span>Machine Learning</span>
+      <span>Power BI</span>
       <span>Python</span>
       <span>SQL</span>
+      <span>Canva</span>
     </div>
   </div>
 </section>
@@ -53,23 +51,12 @@
 <!-- ABOUT -->
 <section id="about" class="section">
   <div class="container narrow about-layout">
-    <img src="./assets/profile.png" alt="Muayad Al Abduwani" class="profile">
-
+    <img src="./assets/profile.png" alt="Muayad Al Abduwani" class="profile" />
     <div>
       <h2>About</h2>
-      <p>
-        I am a Computer Science student with a strong interest in artificial intelligence,
-        data-driven systems, and entrepreneurship.
-      </p>
-      <p>
-        I served as Head of the Sports Committee at the Omani Students Society in Cardiff,
-        leading initiatives that promote leadership, teamwork, and community engagement.
-      </p>
-      <p>
-        I am also a crypto enthusiast exploring blockchain technologies and decentralized systems.
-        I was awarded <strong>Icons Oman 2025</strong> for being a
-        <strong>Digital Content Creator</strong>.
-      </p>
+      <p>I am a Computer Science student with a strong interest in artificial intelligence, data-driven systems, and entrepreneurship.</p>
+      <p>I served as Head of the Sports Committee at the Omani Students Society in Cardiff, promoting leadership and community engagement.</p>
+      <p>I am also a crypto enthusiast exploring blockchain. I was awarded <strong>Icons Oman 2025</strong> for being a <strong>Digital Content Creator</strong>.</p>
     </div>
   </div>
 </section>
@@ -78,35 +65,16 @@
 <section id="achievements" class="section">
   <div class="container">
     <h2 class="center">Achievements & Certifications</h2>
-
     <div class="achievements-grid">
 
-      <div class="achievement-card">
-        <div class="icon">🎓</div>
-        <h3>IGCSE</h3>
-        <p>Certification of Completion</p>
-        <p class="org">The Sultan’s School</p>
-        <span>2019 – 2021</span>
-      </div>
-
-      <div class="achievement-card">
-        <div class="icon">📘</div>
-        <h3>IB Diploma</h3>
-        <p>Certification of Completion</p>
-        <p class="org">The Sultan’s School</p>
-        <span>2021 – 2023</span>
-      </div>
-
-      <div class="achievement-card">
-        <div class="icon">📝</div>
-        <h3>IELTS</h3>
-        <p>Certification of Completion</p>
-        <span>2023</span>
-      </div>
+      <!-- Individual Cards -->
+      <div class="achievement-card"><div class="icon">🎓</div><h3>IGCSE</h3><p>Certification of Completion</p><p class="org">The Sultan’s School</p><span>2019 – 2021</span></div>
+      <div class="achievement-card"><div class="icon">📘</div><h3>IB Diploma</h3><p>Certification of Completion</p><p class="org">The Sultan’s School</p><span>2021 – 2023</span></div>
+      <div class="achievement-card"><div class="icon">📝</div><h3>IELTS</h3><p>Certification of Completion</p><span>2023</span></div>
 
       <div class="achievement-card">
         <div class="icon">📡</div>
-        <h3>Omantel</h3>
+        <h3><a href="https://www.linkedin.com/company/omantel/" target="_blank">Omantel</a></h3>
         <p>Certification of Completion</p>
         <p class="org">Big Data & Analytics Unit<br>Consumer Unit</p>
         <span>2024</span>
@@ -114,7 +82,7 @@
 
       <div class="achievement-card">
         <div class="icon">🏢</div>
-        <h3>Oman Data Park (ODP)</h3>
+        <h3><a href="https://www.linkedin.com/company/oman-data-park/" target="_blank">Oman Data Park (ODP)</a></h3>
         <p>Certification of Completion</p>
         <p class="org">Center of Excellence</p>
         <span>2025</span>
@@ -122,32 +90,20 @@
 
       <div class="achievement-card">
         <div class="icon">🏢</div>
-        <h3>Oman Data Park (ODP)</h3>
+        <h3><a href="https://www.linkedin.com/company/oman-data-park/" target="_blank">Oman Data Park (ODP)</a></h3>
         <p>Certification of Completion</p>
-        <p class="org">Governance, Risk &amp; Compliance</p>
+        <p class="org">Governance, Risk & Compliance</p>
         <span>2025</span>
       </div>
 
-      <div class="achievement-card highlight">
-        <div class="icon">🤖</div>
-        <h3>ORKI AI</h3>
-        <p>Certification of Completion</p>
-        <p class="org">Freelancer</p>
-        <span>2025</span>
-      </div>
+      <div class="achievement-card"><div class="icon">🤖</div><h3>ORKI AI</h3><p>Certification of Completion</p><p class="org">Freelancer</p><span>2025</span></div>
+      <div class="achievement-card"><div class="icon">🏆</div><h3>Icons Oman</h3><p>Digital Content Creator</p><span>2025</span></div>
 
       <div class="achievement-card highlight">
         <div class="icon">🌍</div>
-        <h3>Zain Omantel International</h3>
+        <h3><a href="https://www.linkedin.com/company/zain-omantel/" target="_blank">Zain Omantel International</a></h3>
         <p>Certification of Completion</p>
         <p class="org">Software Engineer</p>
-        <span>2025</span>
-      </div>
-
-      <div class="achievement-card highlight">
-        <div class="icon">🏆</div>
-        <h3>Icons Oman</h3>
-        <p>Digital Content Creator</p>
         <span>2025</span>
       </div>
 
@@ -160,56 +116,21 @@
   <div class="container narrow">
     <p class="eyebrow">Get In Touch</p>
     <h2 class="center">Contact</h2>
-    <p class="center muted">
-      Have a question or want to work together? Let’s connect!
-    </p>
-
-<form class="contact-form" action="https://formsubmit.co/muayadabduwani@gmail.com" method="POST">
-
-  <input type="hidden" name="_next" value="https://dudi14x.github.io/dudiweb/#contact">
-  <input type="hidden" name="_captcha" value="false">
-
-  <div class="row">
-    <input
-      type="text"
-      name="name"
-      placeholder="Your Name"
-      required
-    />
-
-    <input
-      type="email"
-      name="email"
-      placeholder="Your Email"
-      required
-      pattern="^[^@\s]+@[^@\s]+\.[^@\s]+$"
-      title="Please include an '@' and a valid domain like '.com'"
-    />
-  </div>
-
-  <textarea
-    name="message"
-    placeholder="Your Message"
-    required
-  ></textarea>
-
-  <button type="submit" class="btn primary">
-    Send Message
-  </button>
-
-</form>
-
+    <p class="center muted">Have a question or want to work together? Let’s connect!</p>
+    <form class="contact-form" action="https://formsubmit.co/muayadabduwani@gmail.com" method="POST">
+      <input type="hidden" name="_next" value="https://dudi14x.github.io/dudiweb/#contact">
+      <input type="hidden" name="_captcha" value="false">
+      <div class="row">
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+      </div>
+      <textarea name="message" placeholder="Your Message" required></textarea>
+      <button type="submit" class="btn primary">Send Message</button>
+    </form>
   </div>
 </section>
 
-<footer>
-  © 2026 Muayad Al Abduwani
-</footer>
-
+<footer>© 2026 Muayad Al Abduwani</footer>
 <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
