--- a/index.html
+++ b/index.html
@@ -4,170 +4,179 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Muayad Al Abduwani</title>
-  <!-- Use the glossy, watery stylesheet -->
-  <link rel="stylesheet" href="style_glossy.css" />
+
+  <!-- MUST MATCH FILE NAME EXACTLY -->
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <!-- NAVIGATION -->
-  <nav class="nav" id="home">
-    <div class="nav-inner">
-      <div class="logo">Muayad Al Abduwani <span>• Entrepreneur</span></div>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#achievements">Achievements</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li>
-          <a href="https://www.linkedin.com/in/muayad-al-abduwani-b182b7265" target="_blank">LinkedIn</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
 
-  <!-- HERO SECTION -->
-  <section id="home" class="hero">
-    <div class="container center">
-      <h1><span>Build.</span> Evolve.</h1>
-      <p class="subtitle">Start now — let’s connect and grow.</p>
-      <div class="buttons">
-        <a href="assets/resume.pdf" class="btn primary" download>View Resume</a>
-        <a href="#contact" class="btn outline">Contact Me</a>
+<!-- NAV -->
+<nav class="nav" id="home">
+  <div class="nav-inner">
+    <div class="logo">Muayad Al Abduwani <span>• Entrepreneur</span></div>
+    <ul class="nav-links">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#achievements">Achievements</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li>
+        <a href="https://www.linkedin.com/in/muayad-al-abduwani-b182b7265"
+           target="_blank">LinkedIn</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<!-- HERO -->
+<section class="hero">
+  <div class="container center">
+    <h1><span>Build.</span> Evolve.</h1>
+    <p class="subtitle">Start now — let’s connect and grow.</p>
+
+    <div class="buttons">
+      <a href="assets/resume.pdf" class="btn primary" download>View Resume</a>
+      <a href="#contact" class="btn outline">Contact Me</a>
+    </div>
+
+    <div class="tags">
+      <span>Data Science</span>
+      <span>AI Engineer</span>
+      <span>Machine Learning</span>
+      <span>Power BI</span>
+      <span>Python</span>
+      <span>SQL</span>
+      <span>Canva</span>
+    </div>
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section id="about" class="section">
+  <div class="container narrow about-layout">
+    <img src="assets/profile.png" alt="Muayad Al Abduwani" class="profile" />
+    <div>
+      <h2>About</h2>
+      <p>
+        I am a Computer Science student with a strong interest in artificial intelligence,
+        data-driven systems, and entrepreneurship.
+      </p>
+      <p>
+        Head of the Sports Committee at the Omani Students Society in Cardiff,
+        promoting leadership and community engagement.
+      </p>
+      <p>
+        Awarded <strong>Icons Oman 2025</strong> — Digital Content Creator.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- ACHIEVEMENTS -->
+<section id="achievements" class="section">
+  <div class="container">
+    <h1 class="page-title center">Achievements & Certifications</h1>
+
+    <div class="achievements-grid">
+
+      <div class="achievement-card">
+        <div class="icon">🎓</div>
+        <h3>IGCSE</h3>
+        <p>The Sultan’s School</p>
+        <span>2019 – 2021</span>
       </div>
-      <div class="tags">
-        <span>Data Science</span>
-        <span>AI Engineer</span>
-        <span>Machine Learning</span>
-        <span>Power BI</span>
-        <span>Python</span>
-        <span>SQL</span>
-        <span>Canva</span>
+
+      <div class="achievement-card">
+        <div class="icon">📘</div>
+        <h3>IB Diploma</h3>
+        <p>The Sultan’s School</p>
+        <span>2021 – 2023</span>
       </div>
-    </div>
-  </section>
 
-  <!-- ABOUT -->
-  <section id="about" class="section">
-    <div class="container narrow about-layout">
-      <img src="./assets/profile.png" alt="Muayad Al Abduwani" class="profile" />
-      <div>
-        <h2>About</h2>
-        <p>
-          I am a Computer Science student with a strong interest in artificial intelligence, data-driven systems, and
-          entrepreneurship.
-        </p>
-        <p>
-          I served as Head of the Sports Committee at the Omani Students Society in Cardiff, promoting leadership and
-          community engagement.
-        </p>
-        <p>
-          I am also a crypto enthusiast exploring blockchain. I was awarded <strong>Icons Oman 2025</strong> for being a
-          <strong>Digital Content Creator</strong>.
-        </p>
+      <div class="achievement-card">
+        <div class="icon">📝</div>
+        <h3>IELTS</h3>
+        <span>2023</span>
       </div>
-    </div>
-  </section>
 
-  <!-- ACHIEVEMENTS -->
-  <section class="section" id="achievements">
-    <div class="container">
-      <h1 class="page-title center">Achievements &amp; Certifications</h1>
-      <div class="achievements-grid">
-        <!-- IGCSE -->
-        <div class="achievement-card">
-          <div class="icon">🎓</div>
-          <h3>IGCSE</h3>
-          <p>Certification of Completion</p>
-          <p class="org">The Sultan’s School</p>
-          <span>2019 – 2021</span>
-        </div>
-        <!-- IB Diploma -->
-        <div class="achievement-card">
-          <div class="icon">📘</div>
-          <h3>IB Diploma</h3>
-          <p>Certification of Completion</p>
-          <p class="org">The Sultan’s School</p>
-          <span>2021 – 2023</span>
-        </div>
-        <!-- IELTS -->
-        <div class="achievement-card">
-          <div class="icon">📝</div>
-          <h3>IELTS</h3>
-          <p>Certification of Completion</p>
-          <span>2023</span>
-        </div>
-        <!-- Omantel -->
-        <a href="https://www.linkedin.com/company/omantel/" target="_blank" class="achievement-card">
-          <div class="icon">📡</div>
-          <h3>Omantel</h3>
-          <p>Certification of Completion</p>
-          <p class="org">Big Data &amp; Analytics Unit<br />Consumer Unit</p>
-          <span>2024</span>
-        </a>
-        <!-- Oman Data Park - Center of Excellence -->
-        <a href="https://www.linkedin.com/company/oman-data-park/" target="_blank" class="achievement-card">
-          <div class="icon">🏢</div>
-          <h3>Oman Data Park (ODP)</h3>
-          <p>Certification of Completion</p>
-          <p class="org">Center of Excellence</p>
-          <span>2025</span>
-        </a>
-        <!-- Oman Data Park - GRC -->
-        <a href="https://www.linkedin.com/company/oman-data-park/" target="_blank" class="achievement-card">
-          <div class="icon">🏢</div>
-          <h3>Oman Data Park (ODP)</h3>
-          <p>Certification of Completion</p>
-          <p class="org">Governance, Risk &amp; Compliance</p>
-          <span>2025</span>
-        </a>
-        <!-- ORKI AI -->
-        <div class="achievement-card">
-          <div class="icon">🤖</div>
-          <h3>ORKI AI</h3>
-          <p>Certification of Completion</p>
-          <p class="org">Freelancer</p>
-          <span>2025</span>
-        </div>
-        <!-- Icons Oman -->
-        <div class="achievement-card">
-          <div class="icon">🏆</div>
-          <h3>Icons Oman</h3>
-          <p>Digital Content Creator</p>
-          <span>2025</span>
-        </div>
-        <!-- Zain Omantel International -->
-        <a href="https://www.linkedin.com/company/zain-omantel/" target="_blank" class="achievement-card highlight">
-          <div class="icon">🌍</div>
-          <h3>Zain Omantel International</h3>
-          <p>Certification of Completion</p>
-          <p class="org">Software Engineer</p>
-          <span>2025</span>
-        </a>
+      <!-- FULL CARD LINKS -->
+      <a class="achievement-card"
+         href="https://www.linkedin.com/company/omantel/"
+         target="_blank">
+        <div class="icon">📡</div>
+        <h3>Omantel</h3>
+        <p>Big Data & Analytics<br>Consumer Unit</p>
+        <span>2024</span>
+      </a>
+
+      <a class="achievement-card"
+         href="https://www.linkedin.com/company/oman-data-park/"
+         target="_blank">
+        <div class="icon">🏢</div>
+        <h3>Oman Data Park</h3>
+        <p>Center of Excellence</p>
+        <span>2025</span>
+      </a>
+
+      <a class="achievement-card"
+         href="https://www.linkedin.com/company/oman-data-park/"
+         target="_blank">
+        <div class="icon">🏢</div>
+        <h3>Oman Data Park</h3>
+        <p>Governance, Risk & Compliance</p>
+        <span>2025</span>
+      </a>
+
+      <div class="achievement-card">
+        <div class="icon">🤖</div>
+        <h3>ORKI AI</h3>
+        <p>Freelancer</p>
+        <span>2025</span>
       </div>
+
+      <div class="achievement-card">
+        <div class="icon">🏆</div>
+        <h3>Icons Oman</h3>
+        <span>2025</span>
+      </div>
+
+      <a class="achievement-card highlight"
+         href="https://www.linkedin.com/company/zain-omantel/"
+         target="_blank">
+        <div class="icon">🌍</div>
+        <h3>Zain Omantel International</h3>
+        <p>Software Engineer</p>
+        <span>2025</span>
+      </a>
+
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- CONTACT -->
-  <section id="contact" class="section">
-    <div class="container narrow">
-      <p class="eyebrow">Get In Touch</p>
-      <h2 class="center">Contact</h2>
-      <p class="center muted">Have a question or want to work together? Let’s connect!</p>
-      <form class="contact-form" action="https://formsubmit.co/muayadabduwani@gmail.com" method="POST">
-        <input type="hidden" name="_next" value="https://dudi14x.github.io/dudiweb/#contact" />
-        <input type="hidden" name="_captcha" value="false" />
-        <div class="row">
-          <input type="text" name="name" placeholder="Your Name" required />
-          <input type="email" name="email" placeholder="Your Email" required />
-        </div>
-        <textarea name="message" placeholder="Your Message" required></textarea>
-        <button type="submit" class="btn primary">Send Message</button>
-      </form>
-    </div>
-  </section>
+<!-- CONTACT -->
+<section id="contact" class="section">
+  <div class="container narrow">
+    <h2 class="center">Contact</h2>
 
-  <footer>© 2026 Muayad Al Abduwani</footer>
+    <form class="contact-form"
+          action="https://formsubmit.co/muayadabduwani@gmail.com"
+          method="POST">
 
-  <!-- Optionally include your JavaScript file -->
-  <!-- <script src="script.js"></script> -->
+      <input type="hidden" name="_captcha" value="false">
+
+      <div class="row">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+      </div>
+
+      <textarea name="message" placeholder="Your Message" required></textarea>
+
+      <button type="submit" class="btn primary">Send Message</button>
+    </form>
+  </div>
+</section>
+
+<footer>© 2026 Muayad Al Abduwani</footer>
+
 </body>
 </html>
